[gd_scene load_steps=2 format=3 uid="uid://dnmlqitwpqgj6"]

[ext_resource type="Script" path="res://addons/mood/ui_scenes/mood_machine_graph_ui.gd" id="1_qpm73"]

[node name="MoodMachineGraphUI" type="GraphEdit"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -512.0
offset_bottom = -388.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_qpm73")

[node name="GraphPopupMenu" type="PopupMenu" parent="."]
title = "Options"
initial_position = 4
submenu_popup_delay = 0.2
allow_search = false
item_count = 3
item_0/text = "Arrange Nodes"
item_1/text = "Add State"
item_1/id = 1
item_2/text = "Save Changes"
item_2/id = 2
item_2/disabled = true

[node name="MoodPopupMenu" type="PopupMenu" parent="."]
item_count = 2
item_0/text = "Delete State"
item_1/text = "Rename State"
item_1/id = 1

[node name="ChangeNameDialog" type="ConfirmationDialog" parent="."]
disable_3d = true
title = "Change Name"
initial_position = 4
size = Vector2i(280, 120)
unresizable = true
popup_window = true

[node name="VBoxContainer" type="VBoxContainer" parent="ChangeNameDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ChangeNameDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="ChangeNameDialog/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 50

[node name="OldNameLabel" type="Label" parent="ChangeNameDialog/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Old Name:"

[node name="OldNameLabel" type="Label" parent="ChangeNameDialog/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Old Name"
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="ChangeNameDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="ChangeNameDialog/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = 40

[node name="Label" type="Label" parent="ChangeNameDialog/VBoxContainer/HBoxContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "New Name:"
vertical_alignment = 1

[node name="NewNameEdit" type="LineEdit" parent="ChangeNameDialog/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 32)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "New Name"
alignment = 2

[connection signal="connection_request" from="." to="." method="_on_connection_request"]
[connection signal="popup_request" from="." to="." method="_on_popup_request"]
[connection signal="id_pressed" from="GraphPopupMenu" to="." method="_on_graph_popup_menu_id_pressed"]
[connection signal="id_pressed" from="MoodPopupMenu" to="." method="_on_state_popup_menu_id_pressed"]
[connection signal="confirmed" from="ChangeNameDialog" to="." method="_on_change_name_dialog_confirmed"]
[connection signal="text_submitted" from="ChangeNameDialog/VBoxContainer/HBoxContainer2/NewNameEdit" to="." method="_on_new_name_edit_text_submitted"]
